--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Ne73EtxgQCoEPawzjPTF0xCC6s3RJXEgulP0E9YnQwg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://vamosamiboda.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=app
+DB_DATABASE=local_wedding
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=goku123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
